<resources>
    <string name="app_name">RMA projekat</string>
    <string name="naziv_kategorije">Naziv kategorije</string>
    <string name="ikona">Ikona</string>
    <string name="dodaj_ikonu">Dodaj ikonu</string>
    <string name="spasi_kategoriju">Spasi kategoriju</string>
    <string name="pitanja_u_kvizu">Pitanja u kvizu</string>
    <string name="moguca_pitanja">Moguca pitanja</string>
    <string name="dodaj_kviz">Dodaj kviz</string>
    <string name="odgovori">Odgovori</string>
    <string name="dodaj">Dodaj</string>
    <string name="dodaj_tacan">Dodaj tacan</string>
    <string name="spasi_pitanje">Spasi pitanje</string>
    <string name="naziv_pitanja">Naziv pitanja</string>
    <string name="odgovor">Odgovor</string>
    <string name="naziv_kviza">Naziv kviza</string>
    <string name="importuj_kviz">Importuj kviz</string>
    <string name="broj_tacnih_pitanja">Broj tacnih pitanja</string>
    <string name="broj_preostalih_pitanja">Broj preostalih pitanja</string>
    <string name="procenat_tacnih">Procenat tacnih</string>
    <string name="zavrsi_kviz">Zavrsi kviz</string>
    <string name="lista_kategorija">Lista kategorija:</string>
    <string name="kviz_je_zavrsen">Kviz je završen!</string>
    <string name="rang_lista">Rang lista</string>
    <string name="sacekajte">Sačekajte...</string>
</resources>
