<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".aktivnosti.DodajPitanjeAkt">

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/naziv_pitanja"
        android:inputType="textPersonName"
        android:paddingTop="15dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/odgovori"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/lvOdgovori"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/etOdgovor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/odgovor"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/btnDodajOdgovor"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/dodaj"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDodajTacan"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/dodaj_tacan"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDodajPitanje"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:paddingTop="15dp"
        android:text="@string/spasi_pitanje"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />
</LinearLayout>