<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".aktivnosti.DodajKategorijuAkt">

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/naziv_kategorije"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etIkona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/ikona"
            android:inputType="none"
            tools:editable="false" />

        <Button
            android:id="@+id/btnDodajIkonu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/dodaj_ikonu"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDodajKategoriju"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/spasi_kategoriju"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</LinearLayout>